[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchdet"
dynamic = ["version"]
description = "Find non-deterministic functions in your pytorch code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=1.6.0,<2.3",
    "numpy<2.0",
    "pandas",
    "rich",
    "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
torchdet = "torchdet.main:main"

[tool.pyright]
reportUnusedImport = true
reportUnusedVariable = true

[tool.ruff]
line-length = 100

[tool.hatch.version]
path = "src/torchdet/__version__.py"
