[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchdet"
dynamic = ["version"]
description = "Find non-deterministic functions in pytorch code"
keywords = ["pytorch", "determinism", "non-determinism", "deterministic", "non-deterministic", "deterministic functions", "non-deterministic functions"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=1.6.0,<2.3",
    "numpy<2.0",
    "pandas",
    "rich",
    "scipy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  {name = "Mark Coletti", email = "colettima@ornl.gov"},
  {name = "Wael Elasif", email = "elwasifwr@ornl.gov"},
  {name = "Gavin Wiggins", email = "wigginsg@ornl.gov"},
  {name = "Ada Sedova", email = "sedovaaa@ornl.gov"},
  {name = "Sanjif Shanmugavelu"},
]
license = {file = "LICENSE.txt"}
maintainers = [
  {name = "Mark Coletti", email = "colettima@ornl.gov"},
  {name = "Sanjif Shanmugavelu"}
]

[project.urls]
Repository = "https://github.com/minnervva/torchdetscan"
Issues = "https://github.com/minnervva/torchdetscan/issues"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
torchdet = "torchdet.main:main"

[tool.pyright]
reportUnusedImport = true
reportUnusedVariable = true

[tool.ruff]
line-length = 100

[tool.hatch.version]
path = "src/torchdet/__version__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]
